# ComfyUI_IndexTTS

./: README-CN.md  README-EN.md  README.md  __init__.py  indexttsnode.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
checkpoints/: config_v1_5.yaml
indextts/: infer_v2.py
indextts/BigVGAN/alias_free_activation/cuda/: activation1d.py  load.py
indextts/gpt/: model.py
indextts/utils/: front.py  typical_sampling.py
workflow-examples/: 加载说话者.json  加载音频.json  双人会话.json
